tests/fail/data_race/fiber_switch_switch_causality.stderr
error: Undefined Behavior: Data race detected between (1) creating a new allocation on thread `unnamed-ID` and (2) non-atomic write on thread `main` at ALLOC
  --> tests/fail/data_race/fiber_switch_switch_causality.rs:LL:CC
   |
LL | ...   utils::miri_fiber_switch(f, ptr::null_mut());
   |                                                  ^ (2) just happened here
   |
help: and (1) occurred earlier here
  --> tests/fail/data_race/fiber_switch_switch_causality.rs:LL:CC
   |
LL |         utils::miri_fiber_switch(PARENT_FIBER.load(Ordering::Relaxed), ptr::null_mut());
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: this is on thread `main`
   = note: stack backtrace:
           0: main::{closure#0}
               at tests/fail/data_race/fiber_switch_switch_causality.rs:LL:CC
           1: std::thread::scope::{closure#0}
               at RUSTLIB/std/src/thread/scoped.rs:LL:CC
           2: <std::panic::AssertUnwindSafe<{closure@std::thread::scope<'_, {closure@tests/fail/data_race/fiber_switch_switch_causality.rs:LL:CC}, ()>::{closure#0}}> as std::ops::FnOnce<()>>::call_once
               at RUSTLIB/core/src/panic/unwind_safe.rs:LL:CC
           3: std::panicking::catch_unwind::do_call
               at RUSTLIB/std/src/panicking.rs:LL:CC
           4: std::panicking::catch_unwind
               at RUSTLIB/std/src/panicking.rs:LL:CC
           5: std::panic::catch_unwind
               at RUSTLIB/std/src/panic.rs:LL:CC
           6: main
               at tests/fail/data_race/fiber_switch_switch_causality.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to 1 previous error

